base/dvga/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dvga
  namespace: dvga
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dvga
  template:
    metadata:
      labels:
        app: dvga
    spec:
      containers:
        - name: dvga
          image: dolevf/dvga:latest
          ports:
            - containerPort: 5013
          resources:
            requests:
              memory: "128Mi"
              cpu: "50m"
            limits:
              memory: "256Mi"
              cpu: "200m"
          readinessProbe:
            httpGet:
              path: /
              port: 5013
            initialDelaySeconds: 10
            periodSeconds: 10
