base/dvga/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: dvga
  namespace: dvga
spec:
  selector:
    app: dvga
  ports:
    - port: 5013
      targetPort: 5013
